# Zertoxnews

./: .gitignore  README.md  almirsad.html  almirsad.md  data.html  docker-compose.yml  docker-compose2.yml  pyproject.toml  setup.py  test.py  x.py
Ahlullhaqweb/ahlullhaq/: articles.sqlite3  manage.py  requirements.txt
Ahlullhaqweb/ahlullhaq/ahlullhaq/: asgi.py  settings.old  settings.py  urls.py  wsgi.py
Ahlullhaqweb/ahlullhaq/authinticate/: apps.py  urls.py  views.py
Ahlullhaqweb/ahlullhaq/landing/: models.py  urls.py  views.py
Ahlullhaqweb/ahlullhaq/landing/migrations/: 0001_initial.py  0002_alter_article_article.py  0003_remove_article_img_url_articlemedia_img_main_and_more.py
Ahlullhaqweb/ahlullhaq/landing/static/landing/css/: styles.css
Ahlullhaqweb/ahlullhaq/landing/templates/: base.html
Ahlullhaqweb/ahlullhaq/landing/templatetags/: customfilters.py
api/: Types.py  __init__.py  almirsad.html  almirsad.md  api.py  api_run.py  data.html  dockerfile  models.py  networking.py  requirements.txt  scraper.py  test.py
backupapi/: README.md  networking.py  obj.md  scraper.py
data/tor/: torrc
data/tor/web/: hostname  hs_ed25519_public_key  hs_ed25519_secret_key
discord_bot/: api.py  background_tasks.py  background_tasks2_0.py  commands.py  db.py  dockerfile  funks.py  main.py  models.py  requirements.txt  x.py
old/jmedia-main/: .gitignore  README.md  docker-compose.yml
old/jmedia-main/api/: Types.py  api.py  networking.py  scraper.py
old/jmedia-main/discord_bot/: api.py  background_tasks.py  commands.py  db.py  funks.py  main.py  requirements.txt
(+4 files in other folders)
